<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014-2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights granted under the terms of a software
  ~ license agreement between the user who downloaded the software, his/her employer (which must be your
  ~ employer) and MbientLab Inc, (the "License").  You may not use this Software unless you agree to abide by the
  ~ terms of the License which can be found at www.mbientlab.com/terms.  The License limits your use, and you
  ~ acknowledge, that the Software may be modified, copied, and distributed when used in conjunction with an
  ~ MbientLab Inc, product.  Other than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this Software and/or its documentation for any
  ~ purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE PROVIDED "AS IS" WITHOUT WARRANTY
  ~ OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL MBIENTLAB OR ITS LICENSORS BE LIABLE OR
  ~ OBLIGATED UNDER CONTRACT, NEGLIGENCE, STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED TO ANY INCIDENTAL, SPECIAL, INDIRECT,
  ~ PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software, contact MbientLab via email:
  ~ hello@mbientlab.com.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/navigation_fragment_home" android:checked="true" />
        <item android:id="@+id/nav_accelerometer" android:title="@string/navigation_fragment_accelerometer" />
        <item android:id="@+id/nav_barometer" android:title="@string/navigation_fragment_barometer" />
        <item android:id="@+id/nav_color_detector" android:title="@string/navigation_fragment_color_detector" />
        <item android:id="@+id/nav_gpio" android:title="@string/navigation_fragment_gpio" />
        <item android:id="@+id/nav_gyro" android:title="@string/navigation_fragment_gyro" />
        <item android:id="@+id/nav_haptic" android:title="@string/navigation_fragment_haptic" />
        <item android:id="@+id/nav_humidity" android:title="@string/navigation_fragment_humidity" />
        <item android:id="@+id/nav_i2c" android:title="@string/navigation_fragment_i2c" />
        <item android:id="@+id/nav_ibeacon" android:title="@string/navigation_fragment_ibeacon" />
        <item android:id="@+id/nav_light" android:title="@string/navigation_fragment_light" />
        <item android:id="@+id/nav_magnetometer" android:title="@string/navigation_fragment_magnetometer" />
        <item android:id="@+id/nav_neopixel" android:title="@string/navigation_fragment_neopixel" />
        <item android:id="@+id/nav_proximity" android:title="@string/navigation_fragment_proximity" />
        <item android:id="@+id/nav_sensor_fusion" android:title="@string/navigation_fragment_sensor_fusion" />
        <item android:id="@+id/nav_settings" android:title="@string/navigation_fragment_settings" />
        <item android:id="@+id/nav_temperature" android:title="@string/navigation_fragment_temperature" />
    </group>
</menu>