<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_device_information"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_manufacturer"
                    android:id="@+id/Manufacturer_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/manufacturer_value"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_model_number"
                    android:id="@+id/model_number_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/model_number_value"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_serial_number"
                    android:id="@+id/serial_number_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/serial_number_value"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_firmware_revision"
                    android:id="@+id/firmware_revision_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/firmware_revision_value"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_hardware_revision"
                    android:id="@+id/hardware_revision_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/hardware_revision_value"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_mac_address"
                    android:id="@+id/device_mac_address_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/device_mac_address_value"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_rssi"
                    android:textColor="@color/action_text"
                    android:id="@+id/board_rssi_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/board_rssi_value"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_battery_level"
                    android:textColor="@color/action_text"
                    android:id="@+id/board_battery_level_text"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_horizontal"
                    android:id="@+id/board_battery_level_value"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/label_device_update"
            style="?android:attr/buttonBarButtonStyle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:id="@+id/update_firmware" />

        <View
            style="@style/HorizontalLine"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_device_section_switch"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <RadioGroup android:id="@+id/switch_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <RadioButton android:id="@+id/switch_radio_pressed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_switch_pressed"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <RadioButton android:id="@+id/switch_radio_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_switch_released"
                    android:checked="false" />
            </LinearLayout>
        </RadioGroup>

        <View
            style="@style/HorizontalLine"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_device_section_led"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarStyle" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_led_red_on"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/led_red_on" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_led_green_on"
                android:textColor="@android:color/holo_green_dark"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/led_green_on" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_led_blue_on"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_weight="1"
                android:id="@+id/led_blue_on" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/label_led_off"
            android:id="@+id/led_stop" />

    </LinearLayout>
</ScrollView>