<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <android.support.design.widget.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:hintTextAppearance="@style/EditTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/i2c_device_address_value_wrapper" >

        <EditText android:id="@+id/i2c_device_address_value" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/config_name_i2c_device"
            android:singleLine="true"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:hintTextAppearance="@style/EditTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_name_i2c_register_wrapper" >

        <EditText android:id="@+id/config_name_i2c_register_value" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/config_name_i2c_register"
            android:inputType="text"
            android:maxLines="1" android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:hintTextAppearance="@style/EditTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_name_i2c_n_bytes_value_wrapper" >

        <EditText android:id="@+id/config_name_i2c_n_bytes_value" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/config_name_i2c_n_bytes"
            android:maxLines="1" android:singleLine="true"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:hintTextAppearance="@style/EditTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_name_i2c_value_wrapper" >

        <EditText android:id="@+id/config_name_i2c_value" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/config_name_i2c_value"
            android:inputType="none"
            android:maxLines="1" android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/layout_two_button" />
</LinearLayout>